syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataMarket";

// 市场信息
message MarketInfo {
    // 市场编码
    string marketCode = 1;
    // 地域编码
    string regionCode = 2;
    // 市场状态<>normal=0=正常交易&settling=1=清算中&settleend=2=清算完成&stop=3=暂停交易
    int32 status = 3;
    // 中文全称
    string cname = 4;

    string csname = 5;
    // 英文全称
    string ename = 6;

    string esname = 7;
    // ISO 代码
    string isoCode = 8;
    // 当前交易日
    int64 curTradeDate = 9;
    // 日历编码
    string dateCode = 10;
    // 交易日列表
    repeated int64 tradeDateList = 11;
}
